Updates in Index.html & index.css
Updates in Index.html & index.css

--- a/RaisingMinds/app/static/app/css/index.css
+++ b/RaisingMinds/app/static/app/css/index.css
@@ -1,6 +1,5 @@
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
+/* ---------- General ---------- */
+
 html{
   scroll-behavior: smooth;
 }
@@ -33,7 +32,8 @@ a:hover {
   text-decoration: none;
 }
 
-/*---------- dropdown--------- */
+/* ---------- Dropdown ---------- */
+
 .img{
     display: flex;
     align-items: center;
@@ -50,6 +50,7 @@ a:hover {
     text-rendering: optimizeLegibility !important;
     -webkit-font-smoothing: antialiased !important;
 }
+
 .img img{
     height: 30px;
     width: 30px;
@@ -59,18 +60,22 @@ a:hover {
     padding: 0;
     
 }
+
 .img img:hover{
     filter: brightness(0.8);
 }
+
 .padding{
     padding-top :6.5px !important;
     padding-bottom: 2px !important;
    
 }
+
 .dropdown-menu{
     background-color: #212529;
     border: #212529;
 }
+
 .dropdown-menu li a{
     color: #f3f5f8;
     background-color: #212529;
@@ -97,11 +102,8 @@ a:hover {
     }
 }
 
-/*------------ end dropdown ------------------------------------------------*/
+/* ---------- Sections ---------- */
 
-/*--------------------------------------------------------------
-# Sections General
---------------------------------------------------------------*/
 section {
   padding: 80px 0;
   overflow: hidden;
@@ -131,9 +133,8 @@ section {
   color: #919191;
 }
 
-/*--------------------------------------------------------------
-# Hero Section
---------------------------------------------------------------*/
+/* ---------- Hero Section ---------- */
+
   #hero {
     width: 100%;
     height: 100vh;
@@ -161,14 +162,12 @@ section {
     font-size: 50px;
     font-weight: 700;
     line-height: 56px;
-    /* color: #222222; */
     color: #fff;
     font-family: "Poppins", sans-serif;
   }
   
   #hero h1 span {
     color: #106eea;
-    /* color: #212529; */
   }
   
   #hero h2 {
@@ -229,9 +228,8 @@ section {
     }
   }
 
-  /*--------------------------------------------------------------
-# Box Section
---------------------------------------------------------------*/
+/* ---------- Box Section ---------- */
+
 #box .icon-boxes {
   margin-top: 100px;
 }
@@ -296,9 +294,8 @@ section {
   }
 }
 
-/*--------------------------------------------------------------
-# About
---------------------------------------------------------------*/
+/* ---------- About Section ---------- */
+
   .about .content h3 {
     font-weight: 600;
     font-size: 26px;
@@ -353,9 +350,8 @@ section {
     text-decoration: none;
   }
 
-/*--------------------------------------------------------------
-# Counts
---------------------------------------------------------------*/
+/* ---------- Counts Section ---------- */
+
   .counts {
     padding: 60px 0;
   }
@@ -383,9 +379,8 @@ section {
     color: #1e6ca6;
   }
 
-/*--------------------------------------------------------------
-# Projects
---------------------------------------------------------------*/
+/* ---------- Projects Section ---------- */
+
 .projects .icon-box {
   text-align: center;
   padding: 40px 20px 80px 20px;
@@ -436,9 +431,8 @@ section {
   box-shadow: 0px 0 35px 0 rgba(0, 0, 0, 0.08);
 }
 
-/*--------------------------------------------------------------
-# Team
---------------------------------------------------------------*/
+/* ---------- Team Section ---------- */
+
 .team .member {
   margin-bottom: 20px;
   overflow: hidden;
@@ -452,38 +446,6 @@ section {
   position: relative;
   overflow: hidden;
 }
-
-/* .team .member .social {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  height: 40px;
-  opacity: 0;
-  transition: ease-in-out 0.3s;
-  text-align: center;
-  background: rgba(255, 255, 255, 0.85);
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.team .member .social a {
-  transition: color 0.3s;
-  color: #124265;
-  margin: 0 10px;
-  display: inline-block;
-}
-
-.team .member .social a:hover {
-  color: #2487ce;
-}
-
-.team .member .social i {
-  font-size: 18px;
-  margin: 0 2px;
-  line-height: 0;
-} */
 
 .team .member .member-info {
   padding: 25px 15px;
@@ -510,13 +472,8 @@ section {
   color: #777777;
 }
 
-.team .member:hover .social {
-  opacity: 1;
-}
+/* ---------- Contact Section ---------- */
 
-/*--------------------------------------------------------------
-# Contact
---------------------------------------------------------------*/
 .contact .info {
   width: 100%;
   background: #fff;
@@ -563,16 +520,16 @@ section {
   color: #fff;
 }
 
-.contact .php-email-form {
+.contact .email-form {
   width: 100%;
   background: #fff;
 }
 
-.contact .php-email-form .form-group {
+.contact .email-form .form-group {
   padding-bottom: 8px;
 }
 
-.contact .php-email-form .error-message {
+.contact .email-form .error-message {
   display: none;
   color: #fff;
   background: #ed3c0d;
@@ -581,11 +538,11 @@ section {
   font-weight: 600;
 }
 
-.contact .php-email-form .error-message br+br {
+.contact .email-form .error-message br+br {
   margin-top: 25px;
 }
 
-.contact .php-email-form .sent-message {
+.contact .email-form .sent-message {
   display: none;
   color: #fff;
   background: #18d26e;
@@ -594,14 +551,14 @@ section {
   font-weight: 600;
 }
 
-.contact .php-email-form .loading {
+.contact .email-form .loading {
   display: none;
   background: #fff;
   text-align: center;
   padding: 15px;
 }
 
-.contact .php-email-form .loading:before {
+.contact .email-form .loading:before {
   content: "";
   display: inline-block;
   border-radius: 50%;
@@ -613,28 +570,28 @@ section {
   animation: animate-loading 1s linear infinite;
 }
 
-.contact .php-email-form input,
-.contact .php-email-form textarea {
+.contact .email-form input,
+.contact .email-form textarea {
   border-radius: 0;
   box-shadow: none;
   font-size: 14px;
   border-radius: 4px;
 }
 
-.contact .php-email-form input:focus,
-.contact .php-email-form textarea:focus {
+.contact .email-form input:focus,
+.contact .email-form textarea:focus {
   border-color: #2487ce;
 }
 
-.contact .php-email-form input {
+.contact .email-form input {
   height: 44px;
 }
 
-.contact .php-email-form textarea {
+.contact .email-form textarea {
   padding: 10px 12px;
 }
 
-.contact .php-email-form button[type=submit] {
+.contact .email-form button[type=submit] {
   background: #2487ce;
   border: 0;
   padding: 10px 30px;
@@ -643,13 +600,12 @@ section {
   border-radius: 4px;
 }
 
-.contact .php-email-form button[type=submit]:hover {
+.contact .email-form button[type=submit]:hover {
   background: #3194db;
 }
 
-/*--------------------------------------------------------------
-# Footer
---------------------------------------------------------------*/
+/* ---------- Footer ---------- */
+
 #footer {
   color: #444444;
   font-size: 14px;
@@ -768,6 +724,4 @@ section {
 
 #footer .footer-newsletter form input[type=submit]:hover {
   background: #3194db;
-}
-
-  
+}  
