--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -426,7 +426,7 @@
 
               <div class="col-lg-8 mt-5 mt-lg-0">
 
-                <form action="" method="post" role="form" class="php-email-form">
+                <form action="" method="post" role="form" class="email-form">
                   {% csrf_token %}
                   <div class="row gy-2 gx-md-3">
                     <div class="col-md-6 form-group">
@@ -441,12 +441,12 @@
                     <div class="form-group col-12">
                       <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
                     </div>
-                    <div class="my-3 col-12">
+                    {% comment %} <div class="my-3 col-12">
                       <div class="loading">Loading</div>
                       <div class="error-message"></div>
                       <div class="sent-message">Your message has been sent. Thank you!</div>
-                    </div>
-                    <div class="text-center col-12"><button type="submit">Send Message</button></div>
+                    </div> {% endcomment %}
+                    <div class="text-center col-12"><button class="btn btn-primary" type="submit">Send Message</button></div>
                     
                   </div>
                 </form>
