upate index.html views.py

--- a/RaisingMinds/payments/templates/payments/payment_checkout.html
+++ b/RaisingMinds/payments/templates/payments/payment_checkout.html
@@ -36,7 +36,7 @@
                          <img class="" src="{{post.post_image.url}}" alt="post image" width="90%"/>
                      </div>
                      <div class="mt-3 js">
-                        <label >Donate amount : {{donate}}</label><br>
+                        <label >Donate amount : {{donate}} $</label><br>
                      </div>
                     
                      <div class="input-group mb-4">
