--- a/RaisingMinds/payments/static/payments/css/payment_checkout.css
+++ b/RaisingMinds/payments/static/payments/css/payment_checkout.css
@@ -39,14 +39,6 @@ div img{
     -ms-border-radius: 3%;
     -o-border-radius: 3%;
 }
-/*------------------------paynow button----------------------------*/
-.paynowBtn2{
-    width: 22%;
-    display: block;
-    margin: 0 auto;
-
-}
-/*------------------------paynow button----------------------------*/
 .js{
     padding-left: 25px;
     padding-bottom: 20px;
@@ -56,43 +48,51 @@ div img{
     padding-left: 5%;
     padding-right: 5%;
 }
+
+#button-addon2{
+    background-color: #0046b4;
+}
+    /*------back button-------*/
+.left .back-btn button a{
+    color: rgb(9, 7, 24);
+    text-decoration: none;
+
+}
+.back-btn .btn-primary{
+ background-color:#fff ;
+ border: #fff;
+}
+.back-btn .btn-primary:hover{
+    background-color: #fff;
+    border: #fff;
+}
+  /*------end back button-------*/
+
+
+
+/* paypal donate button */
+input[type="image"] {
+ filter: hue-rotate(240deg); /*Changetheimage colour*/
+ display: block;
+ margin: 0 auto;
+ -webkit-filter: hue-rotate(240deg);
+}
+ /* paypal donate button */
+
 /* ***************************************************************************
                                         media query
 ******************************************************************************/
 
-@media (max-width: 1199.9px) {
-    .paynowBtn2 {
-      width: 31%;
-    }
-  }
-  
   @media (max-width: 991.9px) {
-    .paynowBtn2 {
-      width: 45%;
-    }
-   
-    .left{
-        display: none;
-    }
     .right{
         display: none;
     }
     form{
         position: relative;
-        left: 50%;
-        width: 130%;
+       left: -80%;
+        width: 150%;
     }
-  }
-   /* paypal donate button */
-   input[type="image"] {
-    filter: hue-rotate(240deg);
-    /*Changetheimagetoblue*/display: block;
-    margin: 0 auto;
-    -webkit-filter: hue-rotate(240deg);
-}
-    /* paypal donate button */
-  
-  
+
 
   @media (max-width: 767.9px) {
     .donateAmount{
@@ -101,28 +101,28 @@ div img{
     #button-addon2{
         font-size: 13px;
     }
-    .paynowBtn2{
-        font-size: 14px;
-    }
     h4{
         font-size: 16px;
     }
     form{
-        left: 40%;
         width: 180%;
+        left: -100%;
     }
 }
 @media (max-width: 500.9px) {
     .donateAmount{
-        font-size: 11px;
-       
+        font-size: 10px;   
+    }
+    form{
+        left: -130%;
+        width: 200%;
     }
 }
 @media (max-width: 430.9px) {
     
     form{
-        left: -7%;
-        width: 300%;
+        left: -160%;
+        width: 250%;
     }
     .donateAmount{
         font-size: 13px;  
@@ -132,10 +132,17 @@ div img{
     }
 }
 @media (max-width: 280.9px) {
-    
+   
+    .back-btn .btn-primary {
+        position: relative;
+        margin-left: 24px;
+        margin-top: 25px;
+        z-index: 1;
+    }
+   
     form{
-        left: -60%;
-        width: 550%;
+        left: -350%;
+        width: 500%;
     }
     .donateAmount{
         font-size: 10px;
@@ -144,7 +151,5 @@ div img{
     #button-addon2{
         font-size: 12px;
     }
-    .paynowBtn2{
-        font-size: 12px;
-    }
 }
+  }
