--- a/RaisingMinds/payments/templates/payments/payment_checkout.html
+++ b/RaisingMinds/payments/templates/payments/payment_checkout.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!-- Bootstap CDN link -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+     <!-- font awesome icon link -->
      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
      <!-- external CSS -->
@@ -20,11 +21,17 @@
     <div class="container">
 
         <div class="row">
-           
+            <!-- left column -->
+            <div class="col left">
+                <div class="back-btn mt-5">
+                    <button class="btn btn-primary"><a href="{% url 'community' %}"><i class="fa fa-arrow-left"></i></a></button>
 
-            <div class="col left"> </div>
+                </div>
+               
+            </div>
+            <!-- end left column -->
 
-            
+            <!-- middle column -->
             <div class="col-6 mt-2 middle p-5">
                 
                 <form method="post">
@@ -52,6 +59,9 @@
                 
                 {{paypal.render}}
             </div>
+               <!--------end middle column------------->
+
+               <!--right side column-->
             <div class="col right"></div>
           
         </div>
