--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -236,7 +236,7 @@
               
                 {% if post.is_approved %}
                 {% if post.donate_amount >= post.current_amount %}
-              <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+              <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                 <div class="icon-box">
                   <div class="project-image">
                     <img src="{{post.post_image.url}}">
@@ -273,7 +273,7 @@
               
               {% comment %}
 
-              <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+              <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
                 <div class="icon-box">
                   <div class="project-image">
                     <img src="{% static "app/images/school.jpg" %}">
@@ -298,7 +298,7 @@
                 </div>
               </div>
 
-              <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+              <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
                 <div class="icon-box">
                   <div class="project-image">
                     <img src="{% static "app/images/school.jpg" %}">
@@ -374,7 +374,7 @@
               </div>
             </div>
 
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
+            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
               <div class="member">
                 <div class="member-img">
                   <img src="{% static "app/images/profile-pic (3).png" %}" class="img-fluid" alt="">
@@ -425,7 +425,7 @@
 
               <div class="col-lg-8 mt-5 mt-lg-0">
 
-                <form action="" method="post" role="form" class="email-form">
+                <form action="" method="post" role="form" class="email-form" >
                   {% csrf_token %}
                   <div class="row gy-2 gx-md-3">
                     <div class="col-md-6 form-group">
@@ -440,11 +440,6 @@
                     <div class="form-group col-12">
                       <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
                     </div>
-                    {% comment %} <div class="my-3 col-12">
-                      <div class="loading">Loading</div>
-                      <div class="error-message"></div>
-                      <div class="sent-message">Your message has been sent. Thank you!</div>
-                    </div> {% endcomment %}
                     <div class="text-center col-12"><button class="btn btn-primary" type="submit">Send Message</button></div>
                     
                   </div>
@@ -456,6 +451,43 @@
 
           </div>
         </section><!-- End Contact Section -->
+
+        <!-- Q & A Section -->
+        <section id="qna" class="section-bg">
+          <div class="container">
+            <div class="section-title">
+              <h2>Q & A</h2>
+              <p>Explore our Q&A section for insights into our mission, projects, and how you can be a part of the transformative journey toward a brighter future in education.</p>
+            </div>
+            <div class="qna-collapse d-flex align-items-center" >
+
+              <p qna-collapse>
+                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                  Request Donation
+                </button>
+                
+                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                  How to be a Volunteer
+                </button>
+
+                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                  Create a School Profile
+                </button>
+
+                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                  Create a Post
+                </button>
+              </p>
+              <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                  Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                </div>
+              </div>
+
+            </div>
+          </div> 
+        </section>
+        <!-- End Q & A Section -->
 
         {% endblock %}
 
@@ -514,11 +546,11 @@
           </div>
         {% endblock %}
 
-          <!-- Main JS File -->
-          <script src="{% static 'app/js/main.js' %}"></script>
+        <!-- Main JS File -->
+        <script src="{% static 'app/js/main.js' %}"></script>
 
-          <!-- bootstrap JS CDN link -->
-          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> 
+        <!-- bootstrap JS CDN link -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> 
       </body>
 
     
