--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -460,7 +460,7 @@
               <h2>Q & A</h2>
               <p>Explore our Q&A section for insights into our mission, projects, and how you can be a part of the transformative journey toward a brighter future in education.</p>
             </div>
-            <div class="qna-collapse" >
+            <div style="text-align: center;">
 
               <p>
                 <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
@@ -479,6 +479,12 @@
                   Create a Post
                 </button>
               </p>
+              <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                  Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                </div>
+              </div>
+
               <div class="collapse" id="collapseExample">
                 <div class="card card-body">
                   Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
