--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -463,31 +463,41 @@
             <div style="text-align: center;">
 
               <p>
-                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                  Request Donation
-                </button>
-                
-                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                  How to be a Volunteer
+                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#request" aria-expanded="false" aria-controls="request">
+                  How to Request Donation
                 </button>
 
-                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#schoolProfile" aria-expanded="false" aria-controls="schoolProfile">
                   Create a School Profile
                 </button>
 
-                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#post" aria-expanded="false" aria-controls="post">
                   Create a Post
                 </button>
               </p>
-              <div class="collapse" id="collapseExample">
+              <div class="collapse" id="request">
                 <div class="card card-body">
-                  Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                  You can request  donations for your school through our website. Click the profile icon and 
+                  navigate to "Create School Profile". you'll undergo a simple validation process to confirm 
+                  your school details. Once verified, you can proceed to create a compelling request, outlining 
+                  your school's needs and initiatives to connect with potential donors.
                 </div>
               </div>
 
-              <div class="collapse" id="collapseExample">
+              <div class="collapse" id="schoolProfile">
                 <div class="card card-body">
-                  Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                  Build a strong foundation for your school's fundraising journey by creating a comprehensive 
+                  School Profile. Share key details about your institution, its vision, and the specific needs you're 
+                  addressing to connect with potential donors and supporters. Click the profile icon and navigate to "Create School Profile".
+                </div>
+              </div>
+
+              <div class="collapse" id="post">
+                <div class="card card-body">
+                  After successfully creating your school profile, unleash the power of your story by crafting 
+                  compelling posts. You can enhance your narrative with photos, videos, and more. To ensure approval, 
+                  make sure to insert accurate and valid details, as each submission undergoes a meticulous validation 
+                  process to maintain the integrity of our platform.
                 </div>
               </div>
 
