Update School Registration form
update Terms and conditions

--- a/RaisingMinds/school_profile/templates/school_profile/school_registration.html
+++ b/RaisingMinds/school_profile/templates/school_profile/school_registration.html
@@ -175,27 +175,58 @@
             <div class="modal-dialog modal-dialog-centered">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">User Agreement</h5>
+                  <h5 class="modal-title" id="exampleModalLabel">Terms and Conditions</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
 
                   <div style="align-items:center;display: flex;text-align: justify;">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam dolorem consequatur tenetur culpa quia
-                    illo voluptatum eius vel cum in! Sint molestias sed error assumenda reiciendis eligendi ullam
-                    laboriosam at!
-                    Fugit eveniet maxime mollitia cupiditate error commodi animi neque deserunt ab. Officiis, harum
-                    quia! Excepturi vitae ab, porro enim ipsam culpa rem tempora eos nemo eligendi! Voluptatem dicta
-                    expedita reprehenderit.
-                    Possimus, iure cupiditate. Sit nobis nemo aliquid ut repellat vitae totam ipsum suscipit dicta
-                    asperiores ab soluta quis, sunt expedita quam possimus quo voluptate. Pariatur ratione dolorum ex
-                    obcaecati velit!
-                    Natus, facilis beatae. Repudiandae, minus reiciendis? Non ducimus quaerat soluta eius voluptas
-                    voluptatibus vitae saepe assumenda, eaque labore harum sapiente, adipisci porro ratione amet totam
-                    suscipit, aut dignissimos! Laborum, incidunt.
-                    Ducimus aliquam exercitationem voluptatum voluptatem vero sunt, ex assumenda maxime quibusdam fugiat
-                    quis quidem. Ratione, non aliquid praesentium magnam enim vel molestias harum quos illo quia,
-                    laborum corporis aperiam nulla.
+                    <ul>
+                     <li> Acceptance of Terms
+                        <p>By accessing or using the School Donation Web Application , you agree to comply with and be bound by the following terms and conditions. If you do not agree to these terms, please do not use the platform.</p>
+                     </li>
+                     <li> Create School Profiles
+                        <ul type="a">
+                          <li>Users must register an account to create school profiles.</li>
+                          <li>All information provided during registration and in school profiles must be accurate and complete.</li>
+                          <li>Users must provide accurate school verification documents.</li>
+                          <li>Users are responsible for maintaining the confidentiality of their account credentials.</li><br>
+                        </ul>
+                      </li>  
+                      <li> School Profiles and Postings
+                        <ul type="a">
+                          <li>Users creating school profiles must be authorized representatives of the respective educational institution.</li>
+                          <li>School profiles and postings must adhere to the laws and regulations of Sri Lanka.</li>
+                          <li>The platform reserves the right to review and remove any school profile or posting that violates these terms or is deemed inappropriate.</li><br>
+                        </ul>
+                      </li>  
+                      <li> Donation Process</li>
+                        <p>The platform does not guarantee the fulfillment of all donation requests and is not responsible for any unmet needs.</p>
+                      <li> Privacy and Data Security
+                        <ul Type="a">
+                            <li>The platform will collect, store, and process user data in accordance with its Privacy Policy.</li>
+                            <li>Users are responsible for the security of their account information and are encouraged to review the Privacy Policy.</li><br>
+                          </ul>
+                      </li>
+                      <li> Code of Conduct
+                        <ul Type="a">
+                          <li>Users agree to conduct themselves in a respectful and lawful manner when using the platform.</li>
+                          <li>Any form of illegal or unethical behavior will not be tolerated.</li><br>
+                        </ul> 
+                      </li>
+                      <li> Intellectual Property
+                          <ul Type="a">
+                          <li>Users retain ownership of the content they submit to the platform.</li>
+                          <li>The platform may use aggregated and anonymized data for statistical and analytical purposes.</li><br>
+                        </ul> 
+                      </li>
+                      <li> Modification of Terms</li>
+                       <p>The platform reserves the right to modify these terms and conditions at any time. Users will be notified of changes, and continued use of the platform constitutes acceptance of the modified terms.</p>
+                      <li> Termination</li>
+                        <p>The platform reserves the right to terminate or suspend user accounts that violate these terms or for any other reason at its discretion.</p>
+                      <li>Governing Law</li>
+                        <p>These terms and conditions are governed by the laws of Sri Lanka.</p>
+                      </ul> 
                   </div>
 
                 </div>
