--- a/RaisingMinds/users/templates/users/login.html
+++ b/RaisingMinds/users/templates/users/login.html
@@ -58,7 +58,7 @@
 {% endfor %}
 {% endif %} {% endcomment %}
     <!-- login form sction -->
-  <section class="ftco-section mt-4">
+  <section class="main-section mt-4">
     <div class="container loginForm">
       <div class="row justify-content-center">
         <div class="col-md-7 col-lg-5 mt-5">
@@ -112,10 +112,7 @@
   </section>
   <!-- end login form sction -->
 
-  <!-- footer -->
- 
-
-  <!--  end of footer -->
+   <!-- bootstrap java script link -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
