--- a/RaisingMinds/users/templates/users/signup.html
+++ b/RaisingMinds/users/templates/users/signup.html
@@ -43,6 +43,7 @@
                     <a class="nav-item nav-link " href="{% url 'projects' %}">Projects</a>
                     <a class="nav-item nav-link" href="{% url 'index' %}#team">Team</a>
                     <a class="nav-item nav-link" href="{% url 'index' %}#contact">Contact</a>
+                    <a class="nav-item nav-link" href="{% url 'index' %}#qna">Q&A</a>
                 </div>
             </div>
         </div>
@@ -50,7 +51,7 @@
     <!-- End of nav bar -->
 
     <!-- sign up form -->
-    <section class="ftco-section mt-5">
+    <section class="main-section mt-5">
         <div class="container signupForm">
         <div class="row justify-content-center">
             <div class="col-md-7 col-lg-5">
