--- a/RaisingMinds/users/templates/users/login.html
+++ b/RaisingMinds/users/templates/users/login.html
@@ -43,6 +43,7 @@
                 <a class="nav-item nav-link " href="{% url 'projects' %}">Projects</a>
                 <a class="nav-item nav-link" href="{% url 'index' %}#team">Team</a>
                 <a class="nav-item nav-link" href="{% url 'index' %}#contact">Contact</a>
+                <a class="nav-item nav-link" href="{% url 'index' %}#qna">Q&A</a>
             </div>
         </div>
     </div>
