--- a/RaisingMinds/school_profile/static/school_profile/css/school_registration_form.css
+++ b/RaisingMinds/school_profile/static/school_profile/css/school_registration_form.css
@@ -12,7 +12,7 @@ html {
 
 /* logo */
 
-.logo {
+/* .logo { 
     display: flex;
     font-size: 20px;
     font-weight: 500;
@@ -24,10 +24,10 @@ html {
 
 a {
     text-decoration: none;
-}
+} */
 
 /*---------- dropdown--------- */
-.img{
+/* .img{
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -51,8 +51,8 @@ a {
     margin: 0;
     padding: 0;
     
-}
-.img img:hover{
+} */
+/* .img img:hover{
     filter: brightness(0.8);
 }
 .padding{
@@ -88,7 +88,7 @@ a {
         width: 200px;
         
     }
-}
+} */
 
 /*------------ end dropdown ------------------------------------------------*/
 
