--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -122,7 +122,7 @@
               </div>
             </div>
     
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="300">
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
               <div class="icon-box">
                 <div class="icon"><i class="fa fa-file-text-o"></i></div>
                 <h4 class="title text-center"><a href="">Donate Library Books</a></h4>
@@ -130,7 +130,7 @@
               </div>
             </div>
     
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="400">
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
               <div class="icon-box">
                 <div class="icon"><i class="fas fa-desktop"></i></div>
                 <h4 class="title text-center"><a href="">Donate Computers</a></h4>
@@ -138,7 +138,7 @@
               </div>
             </div>
     
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="500">
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
               <div class="icon-box">
                 <div class="icon"><i class="fa fa-handshake-o"></i></div>
                 <h4 class="title text-center"><a href="">Build Class Rooms and IT Labs</a></h4>
